@@ -1,5 +1,8 @@
 2005-12-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/script-column-engraver.cc (stop_translation_timestep):
+	delay adding to script-column.
+
 	* lily/tuplet-bracket.cc (print): suicide if no control-points. 
 
 	* python/convertrules.py (conv): rule for number-visibility
